--- a/JVOS/Hubs/LanguageSwitcherHub.axaml
+++ b/JVOS/Hubs/LanguageSwitcherHub.axaml
@@ -1,14 +1,16 @@
-<local:IHub xmlns="https://github.com/avaloniaui"
+<api:IHub xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:controls="clr-namespace:JVOS.Controls;assembly=JVOS"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+			xmlns:api="clr-namespace:JVOS.ApplicationAPI;assembly=JVOS.ApplicationAPI"
              x:Class="JVOS.Hubs.LanguageSwitcherHub" Foreground="{DynamicResource BarForeground}"
 			 xmlns:local="clr-namespace:JVOS.Hubs">
 	<Border Background="{DynamicResource BarBackground}" BoxShadow="{DynamicResource BarClaymorphismBoxShadow}" CornerRadius="12" MinWidth="256" MinHeight="256">
 		<DockPanel>
 			<StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
-				<Button x:Name="CloseBtn" Content="Close"/>
+				<controls:JButton CornerRadius="12" Background="" x:Name="CloseBtn" Content="Close"/>
 				<TextBlock Text="Select Language" FontFamily="{DynamicResource AntonFont}" Foreground="{DynamicResource BarForeground}"/>
 			</StackPanel>
 			<ScrollViewer>
@@ -18,4 +20,4 @@
 			</ScrollViewer>
 		</DockPanel>
 	</Border>
-</local:IHub>
+</api:IHub>
