--- a/JVOS/Hubs/PanoramaHub.axaml
+++ b/JVOS/Hubs/PanoramaHub.axaml
@@ -1,16 +1,24 @@
-<local:IHub xmlns="https://github.com/avaloniaui"
+<api:IHub xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" ClipToBounds="false"
+             xmlns:controls="clr-namespace:JVOS.Controls;assembly=JVOS"
              x:Class="JVOS.Hubs.PanoramaHub" Foreground="{DynamicResource BarForeground}"
+			xmlns:api="clr-namespace:JVOS.ApplicationAPI;assembly=JVOS.ApplicationAPI"
 			 xmlns:local="clr-namespace:JVOS.Hubs">
 	<Border Background="{DynamicResource BarBackground}" BoxShadow="{DynamicResource
 			BarClaymorphismBoxShadow}" Margin="8" CornerRadius="12" MinWidth="512" x:Name="baseBorder">
 		<ScrollViewer>
 			<StackPanel x:Name="stacky">
-				<TextBlock Margin="12" FontSize="34" Text="1488" HorizontalAlignment="Center" FontWeight="Bold"/>
+				<Grid>
+					<TextBlock Margin="12" FontSize="34" Text="1488" HorizontalAlignment="Center" FontWeight="Bold"/>
+					<controls:JButton Background="{DynamicResource ButtonBarBackground}" CornerRadius="16" FontFamily="Jcons" x:Name="refresh" VerticalAlignment="Top" HorizontalAlignment="Right" VerticalContentAlignment="Center" Foreground="{DynamicResource BarForeground}" FontSize="36" HorizontalContentAlignment="Center" Height="64" Width="64" Margin="12"/>
+				</Grid>
+				<StackPanel x:Name="stackContent">
+					
+				</StackPanel>
 			</StackPanel>
 		</ScrollViewer>
 	</Border>
-</local:IHub>
+</api:IHub>
