--- a/JVOS/Hubs/ClockHub.axaml
+++ b/JVOS/Hubs/ClockHub.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             xmlns:controls="clr-namespace:JVOS.Controls;assembly=JVOS"
+             xmlns:controls="clr-namespace:JVOS.Controls;assembly=JVOS.Controls"
              x:Class="JVOS.Hubs.ClockHub" ClipToBounds="false"
 			 xmlns:local="clr-namespace:JVOS.Hubs"
 			xmlns:api="clr-namespace:JVOS.ApplicationAPI;assembly=JVOS.ApplicationAPI">
@@ -17,8 +17,8 @@
 						<ColumnDefinition/>
 						<ColumnDefinition/>
 					</Grid.ColumnDefinitions>
-					<controls:JButton ClipToBounds="false" Height="32" Foreground="{DynamicResource BarForeground}" Background="{DynamicResource ButtonBarBackground}" BoxShadow="{DynamicResource ButtonBarClaymorphismBoxShadow}" Margin="8, 8, 4, 8" CornerRadius="16" x:Name="_setLeft" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Content="Alig Left"/>
-					<controls:JButton ClipToBounds="false" Grid.Column="1" Height="32" Foreground="{DynamicResource BarForeground}" Background="{DynamicResource ButtonBarBackground}" BoxShadow="{DynamicResource ButtonBarClaymorphismBoxShadow}" Margin="8, 8, 4, 8" CornerRadius="16" x:Name="_setCenter" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Content="Align Center"/>
+					<controls:JButton ClipToBounds="false" Height="32" Foreground="{DynamicResource BarForeground}" Background="{DynamicResource ButtonBarBackground}" BoxShadows="{DynamicResource ButtonBarClaymorphismBoxShadow}" Margin="8, 8, 4, 8" CornerRadius="16" x:Name="_setLeft" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Content="Alig Left"/>
+					<controls:JButton ClipToBounds="false" Grid.Column="1" Height="32" Foreground="{DynamicResource BarForeground}" Background="{DynamicResource ButtonBarBackground}" BoxShadows="{DynamicResource ButtonBarClaymorphismBoxShadow}" Margin="8, 8, 4, 8" CornerRadius="16" x:Name="_setCenter" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Content="Align Center"/>
 				</Grid>
 			</Border>
 		</StackPanel>
