--- a/JVOS/Hubs/LanguageSwitcherHub.axaml
+++ b/JVOS/Hubs/LanguageSwitcherHub.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:controls="clr-namespace:JVOS.Controls;assembly=JVOS"
+             xmlns:controls="clr-namespace:JVOS.Controls;assembly=JVOS.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 			xmlns:api="clr-namespace:JVOS.ApplicationAPI;assembly=JVOS.ApplicationAPI"
              x:Class="JVOS.Hubs.LanguageSwitcherHub" Foreground="{DynamicResource BarForeground}"
