--- a/JVOS/Hubs/PanoramaHub.axaml
+++ b/JVOS/Hubs/PanoramaHub.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" ClipToBounds="false"
-             xmlns:controls="clr-namespace:JVOS.Controls;assembly=JVOS"
+             xmlns:controls="clr-namespace:JVOS.Controls;assembly=JVOS.Controls"
              x:Class="JVOS.Hubs.PanoramaHub" Foreground="{DynamicResource BarForeground}"
 			xmlns:api="clr-namespace:JVOS.ApplicationAPI;assembly=JVOS.ApplicationAPI"
 			 xmlns:local="clr-namespace:JVOS.Hubs">
