--- a/JVOS/Hubs/StartHub.axaml
+++ b/JVOS/Hubs/StartHub.axaml
@@ -50,7 +50,7 @@
 							</ListBox.ItemsPanel>
 						</ListBox>
 					</Grid>
-					<Grid Grid.Column="1">
+					<Grid x:Name="AllAppsGrid" Grid.Column="1" IsVisible="true">
 						<Grid.RowDefinitions>
 							<RowDefinition Height="48"/>
 							<RowDefinition/>
@@ -58,6 +58,16 @@
 						<TextBlock Margin="8" VerticalAlignment="Center" Text="All Applications" FontWeight="Bold" FontSize="16"/>
 						<controls:JButton ClipToBounds="false" Grid.Column="1" Height="32" Width="100" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Foreground="{DynamicResource BarForeground}" BoxShadows="{DynamicResource ButtonBarClaymorphismBoxShadow}" ActiveBoxShadows="{DynamicResource ButtonBarClaymorphismInnerBoxShadow}"  Margin="8, 8, 16, 8" CornerRadius="16" x:Name="_pinButton" HorizontalAlignment="Right" Content="Nazad"/>
 						<ListBox Background="Transparent" x:Name="AllApplications" Grid.Row="1" Margin="8" CornerRadius="8" Padding="8" BorderThickness="0" ItemsSource="{Binding ListAll}">
+						</ListBox>
+					</Grid>
+					<Grid x:Name="MoreRecentsGrid" Grid.Column="1" IsVisible="false">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="48"/>
+							<RowDefinition/>
+						</Grid.RowDefinitions>
+						<TextBlock Margin="8" VerticalAlignment="Center" Text="More Recommendations" FontWeight="Bold" FontSize="16"/>
+						<controls:JButton ClipToBounds="false" Grid.Column="1" Height="32" Width="100" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="8, 8, 16, 8" CornerRadius="16" x:Name="_nazadRecommendBtn" HorizontalAlignment="Right" Content="Nazad"/>
+						<ListBox Background="Transparent" x:Name="MoreRecommendations" Grid.Row="1" Margin="8" CornerRadius="8" Padding="8" BorderThickness="0" ItemsSource="{Binding ListMoreRecommended}">
 						</ListBox>
 					</Grid>
 				</Grid>
