--- a/JVOS/EmbededWindows/Preferences/Colors.axaml
+++ b/JVOS/EmbededWindows/Preferences/Colors.axaml
@@ -7,17 +7,17 @@
              x:Class="JVOS.EmbededWindows.Preferences.ColorsPage">
 	<StackPanel x:Name="rootStack">
 		<Border Classes="Beta Outer" Padding="8, 4" Margin="8">
-			<StackPanel>
-				<TextBlock Text="Properties" Classes="h3"/>
-				<CheckBox Margin="4" x:Name="useDarkMode" Content="Use Dark Mode" Foreground="{DynamicResource BasicForeground}"/>
-				<CheckBox Margin="4" x:Name="useAccentTitle" Content="Use Accent Title" Foreground="{DynamicResource BasicForeground}"/>
-				<CheckBox Margin="4" x:Name="useAccentBar" Content="Use Accent Bar" Foreground="{DynamicResource BasicForeground}"/>
+			<StackPanel x:Name="coloringStack">
+				<TextBlock Text="Coloring" Classes="h3"/>
+				<CheckBox Margin="4" x:Name="useAutoColor" Content="Use Auto Color"/>
 			</StackPanel>
 		</Border>
 		<Border Classes="Beta Outer" Padding="8, 4" Margin="8">
 			<StackPanel>
-				<TextBlock Text="Taskbar" Classes="h3"/>
-				<CheckBox Margin="4" x:Name="hideApplicationTooltips" Content="Hide titles from taskbar icons" Foreground="{DynamicResource BasicForeground}"/>
+				<TextBlock Text="Style" Classes="h3"/>
+				<CheckBox Margin="4" x:Name="useDarkMode" Content="Use Dark Mode"/>
+				<CheckBox Margin="4" x:Name="useAccentTitle" Content="Use Accent Title"/>
+				<CheckBox Margin="4" x:Name="useAccentBar" Content="Use Accent Bar"/>
 			</StackPanel>
 		</Border>
 		<Border DockPanel.Dock="Bottom" Grid.Row="2" Margin="8" Classes="Alpha Transparent Inner">
