--- a/JVOS/Assets/Style/CheckBox.axaml
+++ b/JVOS/Assets/Style/CheckBox.axaml
@@ -1,72 +1,89 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<ControlTheme x:Key="{x:Type CheckBox}"
-				TargetType="CheckBox">
-		<Setter Property="Foreground" Value="{DynamicResource Foreground_BasicInner}"/>
-		<Setter Property="VerticalContentAlignment" Value="Center"/>
-		<Setter Property="ClipToBounds" Value="false"/>
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    x:ClassModifier="internal">
+	<ControlTheme x:Key="{x:Type ComboBox}"
+				  TargetType="ComboBox">
+		<Setter Property="Background" Value="Transparent" />
+		<Setter Property="Foreground" Value="{DynamicResource Foreground_BasicInner}" />
+		<Setter Property="BorderBrush" Value="{DynamicResource Foreground_BasicInner}" />
+		<Setter Property="BorderThickness" Value="2" />
+		<Setter Property="HorizontalContentAlignment" Value="Stretch" />
+		<Setter Property="VerticalContentAlignment" Value="Center" />
+		<Setter Property="Padding" Value="4" />
+		<Setter Property="MinHeight" Value="20" />
+		<Setter Property="FontSize" Value="14" />
+		<Setter Property="PlaceholderForeground" Value="{DynamicResource Foreground_BasicInner}" />
+		<Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
 		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate>
-					<Grid ColumnDefinitions="32, *">
-						<Border 
-							x:Name="PART_Border" CornerRadius="6" 
-							BoxShadow="{DynamicResource ButtonShadow_BasicOuter}"
-							Width="24" Height="24" Margin="4">
-							<TextBlock Opacity="0" Foreground="{DynamicResource Foreground_BasicInner}" x:Name="PART_TextBlock" Text="+" FontSize="24" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-						</Border>
-						<ContentPresenter
-							Grid.Column="1" 
-							x:Name="PART_ContentPresenter"
-							Foreground="{DynamicResource Foreground_BasicInner}"
-                          ContentTemplate="{TemplateBinding ContentTemplate}"
-                          Content="{TemplateBinding Content}"
-                          Margin="{TemplateBinding Padding}"
-                          RecognizesAccessKey="True"
-                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                          TextWrapping="Wrap" />
+			<ControlTemplate>
+				<Border Name="border"
+						Background="{TemplateBinding Background}"
+						BorderBrush="{TemplateBinding BorderBrush}"
+						BorderThickness="{TemplateBinding BorderThickness}"
+						CornerRadius="12">
+					<Grid ColumnDefinitions="*,Auto">
+						<TextBlock Name="PlaceholderTextBlock"
+								   Grid.Column="0"
+								   Margin="{TemplateBinding Padding}"
+								   HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+								   VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+								   Foreground="{TemplateBinding PlaceholderForeground}"
+								   IsVisible="{TemplateBinding SelectionBoxItem,
+                                                   Converter={x:Static ObjectConverters.IsNull}}"
+								   Text="{TemplateBinding PlaceholderText}" />
+						<ContentControl Margin="{TemplateBinding Padding}"
+										HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+										VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+										Content="{TemplateBinding SelectionBoxItem}">
+						</ContentControl>
+						<ToggleButton Name="toggle"
+									  Grid.Column="1"
+									  Background="Transparent"
+									  BorderThickness="0"
+									  ClickMode="Press"
+									  Focusable="False"
+									  IsChecked="{TemplateBinding IsDropDownOpen,
+                                                      Mode=TwoWay}">
+							<Path Width="8"
+								  Height="4"
+								  HorizontalAlignment="Center"
+								  VerticalAlignment="Center"
+								  Data="F1 M 301.14,-189.041L 311.57,-189.041L 306.355,-182.942L 301.14,-189.041 Z"
+								  Fill="{DynamicResource ThemeForegroundBrush}"
+								  Stretch="Uniform" />
+						</ToggleButton>
+						<Popup Name="PART_Popup"
+							   MinWidth="{Binding Bounds.Width, RelativeSource={RelativeSource TemplatedParent}}"
+							   MaxHeight="{TemplateBinding MaxDropDownHeight}"
+							   IsLightDismissEnabled="True"
+							   IsOpen="{TemplateBinding IsDropDownOpen,
+                                            Mode=TwoWay}"
+							   PlacementTarget="{TemplateBinding}">
+							<Border Background="{DynamicResource Background_BasicInner}"
+									BorderThickness="0"
+									CornerRadius="0, 0, 8, 8">
+								<ScrollViewer HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
+											  VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}"
+											  IsDeferredScrollingEnabled="{TemplateBinding (ScrollViewer.IsDeferredScrollingEnabled)}">
+									<ItemsPresenter Name="PART_ItemsPresenter"
+													ItemsPanel="{TemplateBinding ItemsPanel}" />
+								</ScrollViewer>
+							</Border>
+						</Popup>
 					</Grid>
-				</ControlTemplate>
-			</Setter.Value>
+				</Border>
+			</ControlTemplate>
 		</Setter>
-		<Style Selector="^ /template/ TextBlock#PART_TextBlock">
-			<Setter Property="Transitions">
-				<Transitions>
-					<TransformOperationsTransition Property="RenderTransform" Duration="0:0:.125" />
-					<BrushTransition Property="Foreground" Duration="0:0:.125"/>
-				</Transitions>
-			</Setter>
+		<Style Selector="^:dropdownopen /template/ Border#border">
+			<Setter Property="CornerRadius" Value="8, 8, 0, 0"/>
+			<Setter Property="BorderThickness" Value="0"/>
+			<Setter Property="Background" Value="{DynamicResource Background_BasicInner}"/>
 		</Style>
-		<Style Selector="^ /template/ Border#PART_Border">
-			<Setter Property="Transitions">
-				<Transitions>
-					<BrushTransition Property="Background" Duration="0:0:.125"/>
-					<BoxShadowsTransition Property="BoxShadow" Duration="0:0:.125"/>
-				</Transitions>
-			</Setter>
+		<Style Selector="^:pointerover /template/ Border#border">
+			<Setter Property="BorderBrush" Value="{DynamicResource ThemeBorderHighBrush}" />
 		</Style>
-		<Style Selector="^:pressed">
-			<Style Selector="^ /template/ TextBlock#PART_TextBlock">
-				<Setter Property="RenderTransform" Value="scale(0.8)"/>
-			</Style>
-			<Style Selector="^ /template/ Border#PART_Border">
-				<Setter Property="BoxShadow" Value="{DynamicResource ButtonShadow_BasicInner}"/>
-			</Style>
-		</Style>
-		<Style Selector="^:checked">
-			<Style Selector="^ /template/ Border#PART_Border">
-				<Setter Property="Background" Value="{DynamicResource Background_AccentOuter}"/>
-				<Setter Property="BoxShadow" Value="{DynamicResource ButtonShadow_AccentOuter}"/>
-			</Style>
-			<Style Selector="^ /template/ TextBlock#PART_TextBlock">
-				<Setter Property="Opacity" Value="1"/>
-			</Style>
-			<Style Selector="^:pressed">
-				<Style Selector="^ /template/ Border#PART_Border">
-					<Setter Property="BoxShadow" Value="{DynamicResource ButtonShadow_AccentInner}"/>
-				</Style>
-			</Style>
+		<Style Selector="^:disabled /template/ Border#border">
+			<Setter Property="Opacity" Value="{DynamicResource ThemeDisabledOpacity}" />
 		</Style>
 	</ControlTheme>
 </ResourceDictionary>
