--- a/JVOS/EmbededWindows/JumpListWindow.axaml
+++ b/JVOS/EmbededWindows/JumpListWindow.axaml
@@ -6,7 +6,7 @@
              mc:Ignorable="d" Width="384" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="JVOS.EmbededWindows.JumpListWindow">
 	<Grid>
-		<Border Classes="Alpha"/>
+		<Border Classes="Bar Alpha Outer"/>
 		<StackPanel>
 			<c:JButton Content="{Binding AppName}" IsVisible="{Binding ShowAppItem}"/>
 			<c:JButton Content="{Binding PinTitle}" IsVisible="{Binding ShowPinItem}"/>
